--- a/shop2.css
+++ b/shop2.css
@@ -81,3 +81,15 @@ body {
 .follow {
     margin-bottom: 10px;
 }
+
+header {
+    background: rgba(5, 10, 3, 0.8);
+    backdrop-filter: blur(10px);
+    padding: 20px 0;
+    text-align: center;
+    box-shadow: 0 4px 20px rgba(0, 0, 0, 0.5);
+}
+header h1 {
+    margin-bottom: 10px;
+    font-size: 2.5rem;
+}
