--- a/style.css
+++ b/style.css
@@ -56,6 +56,7 @@ body {
 .form .inputBox input {
   width: 100%;
   height: 30px;
+  border-radius: 10px;
   color: #00ff00;
   font-size: 16px;
   margin-left: 10px;
