--- a/eduvideos.css
+++ b/eduvideos.css
@@ -2,13 +2,13 @@ body {
     font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
     margin: 0;
     padding: 0;
-    background-color: #1a1a1a;
+    background: linear-gradient(rgb(0,188,17),black, grey);
     color: #e0e0e0;
 }
 
 header {
-    background-color: #0d0d0d;
-    color: #1d791d;
+    background-color: #004b05;
+    color: #ffffff;
     padding: 20px 0;
     text-align: center;
     border-bottom: 3px solid #1d831d;
