--- a/style.css
+++ b/style.css
@@ -6,6 +6,11 @@
   box-sizing: border-box;
   font-family: 'Poppins', sans-serif;
 }
+html,body{
+  height: 100%;
+  overflow-x: hidden;
+}
+
 body {
   width: 100%;
   height: 100vh;
@@ -16,6 +21,7 @@ body {
 }
 .container {
   height: 100%;
+
 }
 
 .nav-links a:hover {
